--- a/cog.yaml
+++ b/cog.yaml
@@ -1,28 +1,34 @@
 # Configuration for Cog ⚙️
-# Reference: https://cog.run/yaml
+# Reference: https://github.com/replicate/cog/blob/main/docs/yaml.md
 
-build:
-  # set to true if your model requires a GPU
-  gpu: false
+build:  
+  gpu: true  
+  cuda: "11.3"
 
-  # a list of ubuntu apt packages to install
-  # system_packages:
-  #   - "libgl1-mesa-glx"
-  #   - "libglib2.0-0"
+  system_packages:
+    - "ffmpeg"
+    - "libsm6"
+    - "libxext6"
+    - "libglib2.0-0"
+  
+  python_version: "3.9"
+  python_packages:    
+    - "deep-translator==1.8.3"
+    - "gifmaker==1.5"
+    - "icetk==0.0.4"
+    - "opencv-python==4.6.0.66"
+    - "SwissArmyTransformer==0.2.9"
+    - "torch==1.11.0"
+    - "torchvision==0.12.0"
+    - "tqdm==4.64.0"
 
-  # python version in the form '3.11' or '3.11.4'
-  python_version: "3.11"
+  run:
+    - "pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 pytorch-lightning torch-fidelity -f https://download.pytorch.org/whl/torch_stable.html"
+    - "mkdir -p /sharefs/cogview-new; cd /sharefs/cogview-new; wget https://models.nmb.ai/cogvideo/cogvideo-stage1.tar.gz -O - | tar xz"
+    - "cd /sharefs/cogview-new; wget https://models.nmb.ai/cogvideo/cogvideo-stage2.tar.gz -O - | tar xz"    
+    - "mkdir -p /root/.icetk_models; wget -O /root/.icetk_models/ice_text.model https://models.nmb.ai/cogvideo/ice_text.model"
+    - "mkdir -p /root/.tcetk_models; wget -O /root/.icetk_models/ice_image.pt https://models.nmb.ai/cogvideo/ice_image.pt"    
+    - "cd /sharefs/cogview-new; wget https://models.nmb.ai/cogview2/cogview2-dsr.tar.gz -O - | tar xz"
 
-  # a list of packages in the format <package-name>==<version>
-  # python_packages:
-  #   - "numpy==1.19.4"
-  #   - "torch==1.8.0"
-  #   - "torchvision==0.9.0"
-
-  # commands run after the environment is setup
-  # run:
-  #   - "echo env is ready!"
-  #   - "echo another command if needed"
-
-# predict.py defines how predictions are run on your model
 predict: "predict.py:Predictor"
+image: "r8.im/arturogro/cogvideo"
