--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -29,6 +29,12 @@ jobs:
         with:
           tool-cache: true
           docker-images: false
+          # All of these default to true, but feel free to set to "false" if necessary for your workflow
+          android: false
+          dotnet: false
+          haskell: false
+          large-packages: true
+          swap-storage: true
 
       - name: Checkout
         uses: actions/checkout@v4
