--- a/cog.yaml
+++ b/cog.yaml
@@ -18,7 +18,7 @@ build:
     - "icetk==0.0.4"
     - "opencv-python==4.6.0.66"
     - "SwissArmyTransformer==0.2.9"
-    - "torch==1.11.0"
+    - "torch==2.0.1+cu118"
     - "torchvision==0.12.0"
     - "tqdm==4.64.0"
 
