--- a/cog.yaml
+++ b/cog.yaml
@@ -16,10 +16,10 @@ build:
     - "deep-translator==1.8.3"
     - "gifmaker==1.5"
     - "icetk==0.0.4"
-    - "opencv-python==4.6.0.66"
-    - "SwissArmyTransformer==0.2.9"
-    - "torch==2.0.1+cu118"
-    - "torchvision==0.12.0"
+    - "opencv-python==4.10.0.84"
+    - "SwissArmyTransformer==0.4.11"
+    - "torch==2.0.0"
+    - "torchvision==0.15.1"
     - "tqdm==4.64.0"
 
   run:
