--- a/cog.yaml
+++ b/cog.yaml
@@ -23,7 +23,7 @@ build:
     - "tqdm==4.64.0"
 
   run:
-    - "pip install torch==1.11.0+cu113 torchvision==0.12.0+cu113 pytorch-lightning torch-fidelity -f https://download.pytorch.org/whl/torch_stable.html"
+    - "pip install torch==2.0.0 torchvision==0.15.1 pytorch-lightning torch-fidelity -f https://download.pytorch.org/whl/torch_stable.html"
     - "mkdir -p /sharefs/cogview-new; cd /sharefs/cogview-new; wget https://models.nmb.ai/cogvideo/cogvideo-stage1.tar.gz -O - | tar xz"
     - "cd /sharefs/cogview-new; wget https://models.nmb.ai/cogvideo/cogvideo-stage2.tar.gz -O - | tar xz"    
     - "mkdir -p /root/.icetk_models; wget -O /root/.icetk_models/ice_text.model https://models.nmb.ai/cogvideo/ice_text.model"
