--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -20,6 +20,7 @@ jobs:
     # have enough disk space. If you need more space you can set up a 
     # bigger runner on GitHub.
     runs-on:
+      group: default
       labels: aivideo-runner
 
     steps:
