--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -19,7 +19,7 @@ jobs:
     # If your model is large, the default GitHub Actions runner may not 
     # have enough disk space. If you need more space you can set up a 
     # bigger runner on GitHub.
-    runs-on: [self-hosted, aivideo-runner]
+    runs-on: [linux, x64]
 
     steps:
       # This action cleans up disk space to make more room for your
