update swiss army

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ diffusers>=0.30.0
 transformers>=4.43.4
 accelerate>=0.33.0
 sentencepiece==0.2.0
-SwissArmyTransformer==0.4.11
+SwissArmyTransformer>=0.2
 torch==2.0.0
 torchvision==0.15.1
 gradio==4.40.0
@@ -12,4 +12,4 @@ opencv-python==4.10.0.84
 imageio==2.34.2
 imageio-ffmpeg==0.5.1
 openai==1.38.0
-protobuf<=3.20.x
+
