Add login to replicate step

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -48,6 +48,10 @@ jobs:
           # can push your model
           token: ${{ secrets.REPLICATE_API_TOKEN }}
 
+      - name: Login to Replicate
+        run: |
+           echo ${{ env.CLI_TOKEN }} | sudo cog login --token-stdin
+
       # If you trigger the workflow manually, you can specify the model name.
       # If you leave it blank (or if the workflow is triggered by a push), the 
       # model name will be derived from the `image` value in cog.yaml.
